# escp-layout

./: .gitignore  CLAUDE.md  Cargo.toml  FUZZING_RESULTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  MULTIPAGE_TEST_SUMMARY.md  MVP_TEST_RESULTS.md  PAGE_ALIGNMENT_FIX.md  PAGE_ALIGNMENT_SOLUTION.md  PAGE_ENHANCEMENTS_SUMMARY.md  PRINTER_TESTING_GUIDE.md  PRINTER_TEST_RESULTS.md  README.md  WIDGET_EXAMPLES_README.md  esc-p.md  test_all_examples.sh
.claude/commands/: speckit.tasks.md
.specify/memory/: constitution.md
benches/: render_bench.rs  widget_bench.rs
docs/: ADR.md  API-SPEC.md  Document.md  PRD.md  TDD.md  TEST-PLAN.md
examples/: 01_basic_label.rs  02_styled_labels.rs  03_box_container.rs  04_nested_boxes.rs  05_column_layout.rs  06_row_layout.rs  07_stack_layout.rs  08_combined_layouts.rs  barcode.rs  determinism_test.rs  diagnose_output.rs  document_layout.rs  error_handling.rs  graphics_logo.rs  hello_world.rs  invoice.rs  mock_testing.rs  multipage_test.rs  preview.rs  printer_test.rs  receipt.rs  report.rs  tracing_demo.rs  typography.rs  widget_composition.rs  widgets_showcase.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_region.rs  fuzz_render.rs
specs/: PRD.md  TDD.md
specs/000-rust-escap-layout-engine/: data-model.md  quickstart.md  research.md  spec.md
specs/000-rust-escap-layout-engine/contracts/: escp-output-spec.md
specs/001-escp2-printer-driver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-escp2-printer-driver/checklists/: requirements.md
specs/001-escp2-printer-driver/contracts/: printer-api.md
specs/001-rust-escap-layout-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rust-escap-layout-engine/checklists/: requirements.md
specs/001-rust-escap-layout-engine/contracts/: public-api.md
specs/002-widget-composability/: data-model.md  plan-post-design.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-widget-composability/checklists/: requirements.md  spec-quality.md
specs/002-widget-composability/contracts/: README.md  dynamic_box.rs  layout_components.rs  page_enhancement.rs  render_context.rs  render_error.rs  widget_trait.rs
src/: cell.rs  document.rs  error.rs  errors.rs  lib.rs  page.rs  printer.rs  region.rs
src/commands/: graphics.rs  layout.rs  mod.rs  positioning.rs  text.rs
src/escp/: constants.rs  mod.rs  renderer.rs  state.rs
src/io/: mock.rs  mod.rs  retry.rs  timeout.rs
src/types/: font.rs  graphics.rs  mod.rs  pitch.rs  spacing.rs  status.rs
src/widget/: box_widget.rs  context.rs  error.rs  label.rs  mod.rs  rect.rs  tree.rs
src/widget/layout/: column.rs  mod.rs  row.rs  stack.rs
src/widgets/: ascii_box.rs  key_value.rs  label.rs  mod.rs  paragraph.rs  table.rs  text_block.rs
tests/: widget_basic_test.rs
tests/golden/: golden_tests.rs
tests/integration/: multi_page_tests.rs  nested_region_tests.rs  overflow_tests.rs  single_page_tests.rs  style_tests.rs
tests/property/: determinism_tests.rs  no_panic_tests.rs
tests/widget/: boundary.rs  composition.rs  integration.rs  layouts.rs  rendering.rs
