[package]
name = "escp-layout"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
authors = ["Mohammad AlMechkor"]
license = "MIT OR Apache-2.0"
description = "Deterministic text-based layout engine for EPSON LQ-2090II dot-matrix printer using ESC/P condensed mode"
repository = "https://github.com/mohammadalmechkor/matrix"
keywords = ["escp", "printer", "layout", "epson", "dot-matrix"]
categories = ["text-processing", "rendering"]

[dependencies]
# Zero runtime dependencies (only Rust std)

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[features]
default = []
serde = ["dep:serde_dep"]

[dependencies.serde_dep]
package = "serde"
version = "1.0"
features = ["derive"]
optional = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "render_bench"
harness = false

[[bench]]
name = "widget_bench"
harness = false

[[test]]
name = "integration"
path = "tests/integration/single_page_tests.rs"

[[test]]
name = "integration_overflow"
path = "tests/integration/overflow_tests.rs"

[[test]]
name = "integration_multi_page"
path = "tests/integration/multi_page_tests.rs"

[[test]]
name = "integration_nested_regions"
path = "tests/integration/nested_region_tests.rs"

[[test]]
name = "integration_styles"
path = "tests/integration/style_tests.rs"

[[test]]
name = "property"
path = "tests/property/determinism_tests.rs"

[[test]]
name = "property_no_panic"
path = "tests/property/no_panic_tests.rs"

[[test]]
name = "golden"
path = "tests/golden/golden_tests.rs"

[lib]
name = "escp_layout"
path = "src/lib.rs"
